--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.1",
     "express": "^4.16.1",
     "express-session": "^1.17.1",
+    "mongodb": "^3.6.1",
     "passport": "^0.4.1",
     "pug": "^3.0.0"
   },
