--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 SESSION_SECRET="alskdj"
+DATABASE=mongodb+srv://admin:.dlfkjsdflkweetr3@cluster0.4urka.mongodb.net/mongonpm?retryWrites=true&w=majority
