--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "cors": "^2.8.1",
+    "dotenv": "^8.2.0",
     "express": "^4.16.1",
     "express-session": "^1.17.1",
     "mongodb": "^3.6.1",
