--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.1",
@@ -35,5 +36,8 @@
     "passport",
     "socketio"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
