--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SESSION_SECRET=alskdj
 DATABASE=mongodb+srv://admin:.dlfkjsdflkweetr3@cluster0.4urka.mongodb.net/mongonpm?retryWrites=true&w=majority
+PORT=3000
