--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.1",
     "dotenv": "^8.2.0",
