--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SESSION_SECRET=alskdj
-DATABASE=mongodb+srv://admin:.dlfkjsdflkweetr3@cluster0.4urka.mongodb.net/mongonpm?retryWrites=true&w=majority
+DATABASE=mongodb+srv://admin:.dlfkjsdflkweetr3@cluster0.4urka.mongodb.net/fcc-node?retryWrites=true&w=majority
 PORT=3000
